Working on code style