@@ -7,6 +7,7 @@ public class TemperatureSeriesAnalysis {
 
     private static final int DEFAULT_CAPACITY = 10;
     private static final double BOTTOM_BORDER = -273;
+    private static final double COMPARE_BORDER = 0.00001;
     private double[] temperatureSeries;
     private int capacity = DEFAULT_CAPACITY;
     private int size;
@@ -84,7 +85,8 @@ public class TemperatureSeriesAnalysis {
         for (int i = 1; i < size; ++i) {
             if (Math.abs(best - tempValue) > Math.abs(temperatureSeries[i]
                     - tempValue) || Math.abs(Math.abs(best - tempValue) - Math
-                    .abs(temperatureSeries[i] - tempValue)) < 1e-5 && best
+                    .abs(temperatureSeries[i] - tempValue)) < COMPARE_BORDER &&
+                    best
                     < 0) {
                 best = temperatureSeries[i];
             }
@@ -96,19 +98,21 @@ public class TemperatureSeriesAnalysis {
             IllegalArgumentException {
         assertNotEmpty();
         int count = 0;
-        for (int i = 0; i < size; ++i) {
-            if ((new Double(temperatureSeries[i])).compareTo(tempValue) ==
-                    compareToValue) {
+        double[] result = new double[]{};
+        for (int j = 0; j < 2; ++j) {
+            count = 0;
+            for (int i = 0; i < size; ++i) {
+                if (Double.valueOf(temperatureSeries[i]).compareTo(tempValue)
+                        == compareToValue) {
+                    if (j == 0) {
+                        ++count;
+                    } else {
+                        result[count++] = temperatureSeries[i];
+                    }
+                }
                 ++count;
             }
-        }
-        double[] result = new double[count];
-        count = 0;
-        for (int i = 0; i < size; ++i) {
-            if ((new Double(temperatureSeries[i])).compareTo(tempValue) ==
-                    compareToValue) {
-                result[count++] = temperatureSeries[i];
-            }
+            if (j == 0) result = new double[count];
         }
         return result;
     }
